RESOLVED FIXED314893
AX: VoiceOver generally does not automatically move into dialogs, despite presence of the autofocus attribute and / or explicit focus() calls
https://bugs.webkit.org/show_bug.cgi?id=314893
Summary AX: VoiceOver generally does not automatically move into dialogs, despite pre...
Tyler Wilcock
Reported 2026-05-15 08:05:19 PDT
Example page: https://blindsvg.com/shapeCrafter/ Press the "New file" button. This opens a dialog. The webpage calls .focus() on <h2 id="newFileDialogHeading" tabindex="-1">Create a New SVG File</h2>, but VoiceOver still requires explicit VO-Shift-Down interaction to enter the modal. VoiceOver should automatically focus on the heading instead.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-15 08:05:25 PDT
Tyler Wilcock
Comment 2 2026-05-15 14:14:56 PDT
EWS
Comment 3 2026-05-18 10:32:29 PDT
Committed 313425@main (f3b6d2ac3f94): <https://commits.webkit.org/313425@main> Reviewed commits have been landed. Closing PR #65010 and removing active labels.
Tyler Wilcock
Comment 4 2026-05-20 14:53:32 PDT
*** Bug 311125 has been marked as a duplicate of this bug. ***
Tyler Wilcock
Comment 5 2026-05-21 13:30:48 PDT
*** Bug 305343 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.